--- a/package.json
+++ b/package.json
@@ -16,9 +16,16 @@
     "@angular/compiler": "~10.1.4",
     "@angular/core": "~10.1.4",
     "@angular/forms": "~10.1.4",
+    "@angular/localize": "~10.1.4",
     "@angular/platform-browser": "~10.1.4",
     "@angular/platform-browser-dynamic": "~10.1.4",
     "@angular/router": "~10.1.4",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "angularfire2": "^4.0.0-rc.1",
+    "bootstrap": "^4.5.2",
+    "firebase": "^4.2.0",
+    "firebase-tools": "^8.12.0",
+    "g": "^2.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
